Risk for uninitialized memory in case of CHECK macro early return as part of field access

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 21
    • Affects Version/s: 17, 20
    • Component/s: hotspot
    • jfr
    • b06
    • other

      The install_chunk_monitor() function in jfrChunkRotation.cpp and the JfrDCmd::print_help() function should check the JavaValue result before performing further operation like result.get_jobject().

            Assignee:
            Markus Grönlund
            Reporter:
            Shadow Bug
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: